# libnxt

./: .clang-format  .pre-commit-config.yaml  AUTHORS  README  SConstruct  cmd.c  cmd.h  common.c  common.h  error.c  error.h  firmware.c  firmware.h  flash.c  flash.h  flash_routine.h.base  lowlevel.c  lowlevel.h  main_fwexec.c  main_fwflash.c  make_flash_header.py  meson.build  meson_options.txt  samba.c  samba.h
.builds/: debian.yml  freebsd.yml
contrib/: _incr_version
doc/: fwexec.1.scd  fwflash.1.scd  meson.build
flash_write/: Makefile  crt0.s  flash.c  meson.build
